create page equipment , borrowreq, dashboard
